AC_INIT([sweettooth-plugin],[0.1])
AC_CONFIG_MACRO_DIR([m4])
AC_USE_SYSTEM_EXTENSIONS
AM_INIT_AUTOMAKE([gnu])
AM_SILENT_RULES([yes])
LT_INIT
AC_PROG_CC
dnl AM_GNU_GETTEXT_VERSION([0.18.1])
dnl AM_GNU_GETTEXT([external])

PKG_CHECK_MODULES([MOZILLA],[mozilla-plugin])
PKG_CHECK_MODULES([GLIB],[glib-2.0 gio-2.0])

AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
